--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/IOMDocumentation.fxml
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/IOMDocumentation.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<SplitPane fx:id="splitpane" dividerPositions="0.194229112833764" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="466.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bachelorthesis.IOMDOProject.controller.IOMDocumentationController">
+<SplitPane fx:id="splitpane" dividerPositions="0.194229112833764" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="466.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bachelorthesis.IOMDOProject.controller.IOMDocumentationController">
   <items>
       <GridPane>
         <columnConstraints>
@@ -23,20 +23,17 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
-         <children>
-            <Button fx:id="save" mnemonicParsing="false" onAction="#save" text="Speichern" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-         </children>
       </GridPane>
       <ScrollPane hbarPolicy="NEVER" prefHeight="398.0" prefWidth="848.0">
          <content>
-            <GridPane fx:id="infoGrid" gridLinesVisible="true" hgap="8.0" prefHeight="379.0" prefWidth="800.0" vgap="8.0">
+            <GridPane fx:id="infoGrid" hgap="8.0" prefHeight="373.0" prefWidth="779.0" vgap="8.0">
               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="272.2000274658203" minWidth="8.6000337600708" prefWidth="61.40001678466797" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="413.3999662399292" minWidth="10.0" prefWidth="173.59997253417973" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="398.4000274658203" minWidth="10.0" prefWidth="153.6000549316406" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="313.5999450683594" minWidth="10.0" prefWidth="134.19996337890626" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="291.5999572753907" minWidth="10.0" prefWidth="172.6000366210938" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="216.20004272460938" minWidth="10.0" prefWidth="62.00004272460933" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="272.2000274658203" minWidth="8.6000337600708" prefWidth="9.80001316070556" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="413.3999662399292" minWidth="10.0" prefWidth="161.9999847412109" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="398.4000274658203" minWidth="10.0" prefWidth="163.79998779296875" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="313.5999450683594" minWidth="10.0" prefWidth="158.2000244140625" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="291.5999572753907" minWidth="10.0" prefWidth="158.40004882812502" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="216.20004272460938" minWidth="10.0" prefWidth="157.59995117187498" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints maxHeight="80.00000610351563" minHeight="10.0" prefHeight="16.000004196166998" vgrow="SOMETIMES" />
@@ -50,7 +47,7 @@
                      <children>
                         <Label text="%lbl.time" />
                         <TextField fx:id="timeStartTF" />
-                        <Button id="test" fx:id="addRowBtn" mnemonicParsing="false" onAction="#addRow" text="Button" />
+                        <Button id="test" fx:id="addRowBtn" mnemonicParsing="false" onAction="#addRow" text="Add" />
                      </children>
                   </VBox>
                   <VBox prefHeight="200.0" prefWidth="100.0" spacing="4.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
@@ -72,6 +69,7 @@
                         <TextField fx:id="commentIOMStart" />
                      </children>
                   </VBox>
+                  <Button fx:id="save" alignment="BOTTOM_LEFT" mnemonicParsing="false" onAction="#save" prefHeight="26.0" prefWidth="82.0" text="Speichern" GridPane.columnIndex="5" GridPane.rowIndex="4" />
                </children>
             </GridPane>
          </content>
