Record document navigation

--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/Menu.fxml
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/Menu.fxml
@@ -30,7 +30,7 @@
       </HBox>
    </top>
    <center>
-      <GridPane fx:id="gridPane" prefHeight="400.0" prefWidth="400.0" BorderPane.alignment="CENTER">
+      <GridPane fx:id="gridPane" BorderPane.alignment="CENTER">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -54,17 +54,19 @@
       </VBox>
    </left>
    <bottom>
-      <HBox alignment="CENTER_RIGHT" BorderPane.alignment="CENTER_RIGHT">
+      <HBox alignment="TOP_RIGHT" spacing="8.0" BorderPane.alignment="CENTER_RIGHT">
          <BorderPane.margin>
             <Insets bottom="8.0" right="8.0" />
          </BorderPane.margin>
          <children>
-            <Button fx:id="baselinesBtn" mnemonicParsing="false" onAction="#openBaselines" text="Baselines">
+            <Button fx:id="patientDataBtn" disable="true" mnemonicParsing="false" onAction="#openPatientData" text="Patienten Daten" visible="false" wrapText="true" />
+            <Button fx:id="baselinesBtn" mnemonicParsing="false" onAction="#openBaselines" text="Baselines" visible="false">
                <HBox.margin>
-                  <Insets right="10.0" />
+                  <Insets />
                </HBox.margin>
             </Button>
-            <Button fx:id="test" alignment="CENTER_RIGHT" contentDisplay="RIGHT" mnemonicParsing="false" onAction="#test" text="IOM Erfassung" />
+            <Button fx:id="iomDocumentationBtn" alignment="CENTER_RIGHT" contentDisplay="RIGHT" disable="true" mnemonicParsing="false" onAction="#openIOMDocumentation" text="IOM Erfassung" visible="false" />
+            <Button fx:id="saveBtn" mnemonicParsing="false" onAction="#saveDocumentation" text="Speichern" visible="false" />
          </children>
       </HBox>
    </bottom>
