--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/IOMDocumentation.fxml
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/IOMDocumentation.fxml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -15,13 +15,13 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <BorderPane xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bachelorthesis.IOMDOProject.controller.IOMDocumentationController">
    <top>
       <GridPane>
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -102,13 +102,18 @@
                         </VBox>
                      </children>
                   </GridPane>
-                  <Button fx:id="save" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#save" text="Speichern" SplitPane.resizableWithParent="false" />
+                  <HBox alignment="TOP_RIGHT" SplitPane.resizableWithParent="false">
+                     <children>
+                        <Button fx:id="save" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#save" text="Speichern">
+                           <HBox.margin>
+                              <Insets right="24.0" />
+                           </HBox.margin>
+                        </Button>
+                     </children>
+                  </HBox>
               </items>
             </SplitPane>
          </content>
       </ScrollPane>
    </center>
-   <bottom>
-      <AnchorPane BorderPane.alignment="CENTER" />
-   </bottom>
 </BorderPane>
